# chaosreactor

./: .editorconfig  .gitignore  .gitmodules  .tool-versions  Cargo.toml  LICENSE  LICENSE.spdx  README.md  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  workspace.json
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.storybook/: main.js
.trunk/: trunk.yaml
apps/chaosreactor/: .eslintrc.json  blitz-client.ts  blitz-server.ts  jest.config.ts  next.config.js  package.json  project.json
apps/chaosreactor-e2e/: project.json
apps/chaosreactor-old/: .env.local
apps/chaosreactor/apollo/: client.ts
apps/chaosreactor/components/: Cta.tsx  DocList.tsx  Header.tsx
apps/chaosreactor/lib/: chakra.tsx
apps/chaosreactor/pages/: _app.tsx  _document.tsx  index.tsx
apps/desktop/: .env.example  .env.local.example  .gitignore  next.config.js  package-lock.json  package.json  project.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/docs/: docusaurus.config.js  flightcontrol.json  project.json  sidebars.js
apps/trpc/: package.json  project.json
apps/ui-e2e/: project.json
apps/voxable/: .eslintrc.json  jest.config.ts  package.json  project.json
apps/voxable-e2e/: project.json
apps/web/: package.json  project.json
libs/trpc/: .gitignore  package-lock.json  package.json  project.json  tsconfig.json
libs/ui/: package.json  project.json  tsconfig.lib.json
tools/db/: users.sql
(+153 files in other folders)
